--- a/app.css
+++ b/app.css
@@ -45,4 +45,5 @@ body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-style: italic;
     font-weight: bold;
+    font-size: 20px;
 }
